REOPENED158941
When navigating, discard decoded image data that is only live due to page cache.
https://bugs.webkit.org/show_bug.cgi?id=158941
Summary When navigating, discard decoded image data that is only live due to page cache.
Andreas Kling
Reported 2016-06-20 06:50:46 PDT
We could hasten the dropping of decoded image data when a CachedImage is really only used by page cached pages.
Attachments
Patch thing (7.82 KB, patch)
2016-06-20 06:53 PDT, Andreas Kling
no flags
Patch thing (7.98 KB, patch)
2016-06-20 06:54 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2016-06-20 06:53:03 PDT
Created attachment 281649 [details] Patch thing
Andreas Kling
Comment 2 2016-06-20 06:54:38 PDT
Created attachment 281650 [details] Patch thing
WebKit Commit Bot
Comment 3 2016-06-20 08:04:51 PDT
Comment on attachment 281650 [details] Patch thing Rejecting attachment 281650 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 281650, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ing rebase: :040000 040000 52ddce205a5ea636dcff0e63495fa587c341e608 f3f1d4fa1265a983a518943e7e3a0f794477e6bd M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output: http://webkit-queues.webkit.org/results/1536811
WebKit Commit Bot
Comment 4 2016-06-20 09:43:42 PDT
Comment on attachment 281650 [details] Patch thing Rejecting attachment 281650 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 281650, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ng: https://bugs.webkit.org/show_bug.cgi?id=158941&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 281650 from bug 158941. /Volumes/Data/EWS/WebKit/Source/WebKit2/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Updating OpenSource From git://git.webkit.org/WebKit + d894a6a...705033b master -> origin/master (forced update) Current branch master is up to date. Full output: http://webkit-queues.webkit.org/results/1537172
WebKit Commit Bot
Comment 5 2016-06-20 10:23:57 PDT
Comment on attachment 281650 [details] Patch thing Clearing flags on attachment: 281650 Committed r202231: <http://trac.webkit.org/changeset/202231>
WebKit Commit Bot
Comment 6 2016-06-20 10:24:02 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 7 2016-06-21 09:59:04 PDT
Note that it seems that the Mac PLT regressed around the time this patch landed. I am working on confirming the regression came from this change.
Chris Dumez
Comment 8 2016-06-21 10:06:00 PDT
Reverted r202231 for reason: Seems to have regressed PLT on both iOS and Mac (very obvious on iOS Warm PLT) Committed r202278: <http://trac.webkit.org/changeset/202278>
Chris Dumez
Comment 9 2016-06-21 18:46:49 PDT
(In reply to comment #8) > Reverted r202231 for reason: > > Seems to have regressed PLT on both iOS and Mac (very obvious on iOS Warm > PLT) > > Committed r202278: <http://trac.webkit.org/changeset/202278> Clear 1% progression on MacBookPro PLT from the roll out.
Chris Dumez
Comment 10 2016-06-21 21:46:17 PDT
(In reply to comment #9) > (In reply to comment #8) > > Reverted r202231 for reason: > > > > Seems to have regressed PLT on both iOS and Mac (very obvious on iOS Warm > > PLT) > > > > Committed r202278: <http://trac.webkit.org/changeset/202278> > > Clear 1% progression on MacBookPro PLT from the roll out. Similar progression on iOS from the rollout.
Note You need to log in before you can comment on or make changes to this bug.