Source/WebCore/loader/ImageLoader.h
@@ -79,6 +79,8 @@ private:
     virtual void dispatchLoadEvent() = 0;
     virtual String sourceURI(const AtomicString&) const = 0;
 
+    bool inPageCache() const final;
+
     void updatedHasPendingEvent();
 
     void dispatchPendingBeforeLoadEvent();
