Source/WebCore/loader/cache/CachedImage.h
@@ -75,6 +75,8 @@ public:
     void addDataBuffer(SharedBuffer&) override;
     void finishLoading(SharedBuffer*) override;
 
+    bool areAllClientsInPageCache() const;
+
     enum SizeType {
         UsedSize,
         IntrinsicSize
